--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,21 +1,25 @@
 @font-face {
   font-family: Rajhdani-regular;
   src: url("../fonts/Rajdhani-Regular.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: Rajhdani-semibold;
   src: url("../fonts/Rajdhani-SemiBold.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: Rajhdani-bold;
   src: url("../fonts/Rajdhani-Bold.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: Inter-medium;
   src: url("../fonts/Inter-Medium.ttf");
+  font-display: swap;
 }
 
 //Colores
@@ -289,11 +293,11 @@ input{
 }
 
 .aprobado{
-  -webkit-text-stroke: 0.5px $verde;
+  -webkit-text-stroke: 0.2px $verde;
 }
 
 .suspenso{
-  -webkit-text-stroke: 0.5px $rojo;
+  -webkit-text-stroke: 0.2x $rojo;
 }
 
 //Tercer div
