--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -43,7 +43,7 @@ body {
 
 #container {
   display: grid;
-  grid-template-rows: 0.5fr 5r 1fr;
+  grid-template-rows: 0.1fr 7fr 0.1fr;
   grid-template-columns: 1fr;
 }
 
@@ -298,7 +298,7 @@ input {
   padding-bottom: 30px;
 }
 
-button {
+button, .reviewMovil a, .botonTablet {
   border-style: none;
   border-radius: 4px;
   padding: 2%;
@@ -428,10 +428,9 @@ button:hover {
   }
   .reviewTablet img {
     width: 42vw;
-    height: 42w;
     border-radius: 55px;
   }
-  button {
+  button, .reviewMovil a, .botonTablet {
     margin-bottom: 20px;
   }
   .fotoReview {
@@ -495,10 +494,9 @@ button:hover {
   }
   .reviewTablet img {
     width: 40vw;
-    height: 40w;
     max-width: 500px;
   }
-  button {
+  button, .reviewMovil a, .botonTablet {
     margin-bottom: 20px;
   }
   .fotoReview img {
