--- a/styles/styleCookies.css
+++ b/styles/styleCookies.css
@@ -43,7 +43,7 @@ body {
 
 #container {
   display: grid;
-  grid-template-rows: 0.5fr 5r 1fr;
+  grid-template-rows: 0.25fr 2fr 0.25fr;
   grid-template-columns: 1fr;
 }
 
