--- a/styles/entrar.scss
+++ b/styles/entrar.scss
@@ -1,36 +1,43 @@
 @font-face {
     font-family: OpenSans-semibold;
     src: url("../fonts/OpenSans-SemiBold.ttf");
+    font-display: swap;
 }
 
 @font-face {
     font-family: OpenSans-regular;
     src: url("../fonts/OpenSans-Regular.ttf");
+    font-display: swap;
 }
 
 @font-face {
     font-family: OpenSans-bold;
     src: url("../fonts/OpenSans-Bold.ttf");
+    font-display: swap;
 }
 
 @font-face {
     font-family: Rajhdani-regular;
     src: url("../fonts/Rajdhani-Regular.ttf");
+    font-display: swap;
 }
 
 @font-face {
     font-family: Rajhdani-semibold;
     src: url("../fonts/Rajdhani-SemiBold.ttf");
+    font-display: swap;
 }
 
 @font-face {
     font-family: Rajhdani-bold;
     src: url("../fonts/Rajdhani-Bold.ttf");
+    font-display: swap;
 }
 
 @font-face {
     font-family: Inter-medium;
     src: url("../fonts/Inter-Medium.ttf");
+    font-display: swap;
 }
 
 
@@ -57,7 +64,7 @@ body {
 
 #container {
     display: grid;
-    grid-template-rows: 0.5fr 5r 1fr;
+    grid-template-rows: 0.25fr 1.5fr 0.25fr;
     grid-template-columns: 1fr;
 }
 
