--- a/styles/anadir.scss
+++ b/styles/anadir.scss
@@ -63,7 +63,7 @@ body {
 
 #container {
     display: grid;
-    grid-template-rows: 0.25fr 1.5fr 0.25fr;
+    grid-template-rows: 0.25fr fr 0.25fr;
     grid-template-columns: 1fr;
 }
 
